[package]
name = "egui_node_graph_example"
version = "0.1.0"
authors = ["setzer22"]
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = {version = "0.22", features = ["persistence"]}
egui_node_graph = { path = "../egui_node_graph", features = ["persistence"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
egui_file = "0.10.0"
bincode = "1.3"
egui_extras = "0.22.0"
slotmap = { version = "1.0" }
strum = "0.25"
strum_macros = "0.25"

[features]
default = []

[profile.release]
opt-level = 2 # fast and small wasm
