[package]
name = "egui_node_graph_example"
version = "0.1.0"
authors = ["setzer22"]
edition = "2021"
rust-version = "1.56"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]

eframe = { version = "0.22.0", default-features = false, features = [
    "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"

egui_node_graph = { path = "../egui_node_graph", features = ["persistence"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
egui_file = "0.10.0"
bincode = "1.3"
egui_extras = "0.22.0"
slotmap = { version = "1.0" }
strum = "0.25"
strum_macros = "0.25"

[features]
default = []

[profile.release]
opt-level = 2 # fast and small wasm



# native:
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10"

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
